[package]
name = "metrics-test"
version = "0.1.0"
authors = ["Floris Bruynooghe <flub@devork.be>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
metrics = "0.12.1"
metrics-core = "0.5.2"
metrics-runtime = "0.13.0"
log = "0.4.8"
env_logger = "0.7.1"